# qqlrs

./: Cargo.toml  README.md
src/: .gitattributes  art.rs  color.rs  colordata.json  config.rs  layouts.rs  lib.rs  math.rs  rand.rs  sectors.rs  traits.rs
src/art/: colors_used.rs
tests/: golden.rs
