[package]
name = "qql"
version = "0.1.0"
edition = "2021"
default-run = "qql-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qql"

[[bin]]
name = "qql-cli"

[dependencies]
hex-literal = "0.3.4"
raqote = "0.8.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
hex-literal = "0.3.4"
