[package]
name = "qql"
version = "0.1.0"
edition = "2021"
default-run = "qql-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qql"

[[bin]]
name = "qql-cli"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.4", features = ["derive"] }
hex = "0.4.3"
hex-literal = "0.3.4"
raqote = "0.8.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
hex-literal = "0.3.4"
image = { version = "0.24.7", default-features = false, features = ["png"] }
